examples/failing/OrphanInstanceNullary.purs
-- @shouldFailWith OrphanInstance
module Test where
import Lib
instance c :: C
